<resources>
    <string name="app_name">提要钩玄</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm">确认</string>
    <string name="input_url_url">视频URL</string>
    <string name="title_abstract">摘要</string>
    <string name="welcome_words">欢迎使用提要钩玄</string>
    <string name="main_window_start"> 一键开始 </string>
    <string name="main_window_my_abstract">我的摘要</string>
    <string name="main_window_help">帮助说明</string>
    <string name="input_url_keyword">(可选)关键词，空格分隔</string>
    <string name="switch_on">开</string>
    <string name="switch_off">关</string>
    <string name="input_url_toolbar">输入URL和关键词</string>
    <string name="input_url_keyword_trigger">关键词触发提醒</string>
    <string name="pic_text_text">文本摘要</string>
    <string name="pic_text_edit">编辑</string>
    <string name="pic_text_reset">重置</string>
    <string name="my_abstract">我的摘要</string>
    <string name="channel_name">VideoInsight</string>
    <string name="channel_description">VideoInsight</string>
    <string name="MODEL_PATH_DEFAULT">models/ocr_v2_for_cpu</string>
    <string name="LABEL_PATH_DEFAULT">labels/ppocr_keys_v1.txt</string>
    <string name="IMAGE_PATH_DEFAULT">images/0.jpg</string>
    <string name="CPU_THREAD_NUM_DEFAULT">4</string>
    <string name="CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="INPUT_COLOR_FORMAT_DEFAULT">BGR</string>
    <string name="INPUT_SHAPE_DEFAULT">1,3,960</string>
    <string name="INPUT_MEAN_DEFAULT">0.485, 0.456, 0.406</string>
    <string name="INPUT_STD_DEFAULT">0.229,0.224,0.225</string>
    <string name="SCORE_THRESHOLD_DEFAULT">0.1</string>
    <string name="CHOOSE_PRE_INSTALLED_MODEL_KEY">CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ENABLE_CUSTOM_SETTINGS_KEY">ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="MODEL_PATH_KEY">MODEL_PATH_KEY</string>
    <string name="LABEL_PATH_KEY">LABEL_PATH_KEY</string>
    <string name="IMAGE_PATH_KEY">IMAGE_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY">CPU_POWER_MODE_KEY</string>
    <string name="INPUT_COLOR_FORMAT_KEY">INPUT_COLOR_FORMAT_KEY</string>
    <string name="INPUT_SHAPE_KEY">INPUT_SHAPE_KEY</string>
    <string name="INPUT_MEAN_KEY">INPUT_MEAN_KEY</string>
    <string name="INPUT_STD_KEY">INPUT_STD_KEY</string>
    <string name="SCORE_THRESHOLD_KEY">SCORE_THRESHOLD_KEY</string>
</resources>