<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_words"
        android:textSize="28sp"
        android:layout_marginTop="205dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="315dp"
        android:background="@drawable/textview_background"
        android:enabled="true"
        android:text="@string/main_window_start"
        android:textColor="#777777"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_my_abstract"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="407dp"
        android:background="@drawable/textview_background"
        android:enabled="true"
        android:text="@string/main_window_my_abstract"
        android:textColor="#777777"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_help"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="499dp"
        android:background="@drawable/textview_background"
        android:enabled="true"
        android:text="@string/main_window_help"
        android:textColor="#777777"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="174dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>