<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/pic_text_text_view"
        android:layout_width="320dp"
        android:layout_height="172dp"
        android:text="@string/pic_text_text"
        android:textSize="28sp"
        android:layout_marginTop="34dp"
        android:background="@drawable/textview_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/pic_text_pic"
        android:layout_width="320dp"
        android:layout_height="143dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/image1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pic_text_text_view"/>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginTop="98dp"
        android:layout_marginStart="95dp"
        android:background="@drawable/textview_background"
        android:enabled="true"
        android:text="@string/pic_text_edit"
        android:textColor="#777777"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pic_text_pic" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:layout_marginTop="98dp"
        android:layout_marginStart="240dp"
        android:background="@drawable/textview_background"
        android:enabled="true"
        android:text="@string/pic_text_reset"
        android:textColor="#777777"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pic_text_pic" />

</androidx.constraintlayout.widget.ConstraintLayout>