<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_inputUrl"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#000000"
        app:navigationIcon="@drawable/ic_navigate_before_white_24dp"
        app:title=""
        app:titleTextColor="@color/white"
        app:contentInsetStart="0dp"
        app:buttonGravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginEnd="95dp"
                android:background="@android:color/transparent"
                android:text="@string/input_url_toolbar"
                android:textColor="#FFFFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.729" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/text_input_url"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="50dp"
        app:met_underlineColor="#cccccc"
        app:met_primaryColor="#00A2FF"
        app:met_iconLeft="@drawable/outline_link_24"
        app:met_iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/input_url_url"
        app:testType="webUrl"
        app:met_clearButton="true"
        app:emptyErrorString="该项不能为空"
        app:testErrorString="请填写合法的url"
        app:emptyAllowed="false"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/text_input_keyword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="340dp"
        android:layout_marginStart="50dp"
        app:met_underlineColor="#cccccc"
        app:met_primaryColor="#00A2FF"
        android:autofillHints="www.baidu.com"
        android:background="@drawable/textview_background"
        android:hint="@string/input_url_keyword"
        android:inputType="textUri"
        android:selectAllOnFocus="true"
        app:met_clearButton="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:emptyAllowed="true"/>

    <Button
        android:id="@+id/button_confirmInput"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/textview_background"
        android:enabled="true"
        android:text="@string/confirm"
        android:textColor="#777777"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/button_urlHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginRight="340dp"
        android:src="@drawable/outline_link_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/button_kw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginRight="340dp"
        android:src="@drawable/outline_bookmark_24"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
